@@ -135,5 +135,9 @@ In the struct canmsg_tag I have changed the CAN_data[16] in CAN_data[8]. I do no
 * fixed velocity timeout in impedance velocity control mode.
 * fixed position commands in torque control mode (now commands are ignored).
 * Current build 39.		
+
+2012-16-May Marco Randazzo <marco.randazzo@iit.it>
+* fixed issue related to the execution of velocity commands during a position trajectory.
+* Current build 45.
    
 
